--- a/menu.html
+++ b/menu.html
@@ -176,10 +176,9 @@
         <div class="copyright">
           <div class="row">
             <div class="text-center mb-3 mb-md-0">
-              &copy; <a class="border-bottom" href="#">Warung Itik Saburai</a>, All Right Reserved.
+              &copy; <a class="border-bottom" href="https://maps.app.goo.gl/FqLEtea2H1WgdFNZ7">Warung Itik Saburai</a>, All Right Reserved.
 
-              <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-              Designed By <a class="border-bottom" href="https://htmlcodex.com">WarNet-Kel3</a>
+              Designed By <a class="border-bottom">WarNet-Kel3</a>
             </div>
           </div>
         </div>
